# kmer-forge

./: .gitignore  Cargo.toml  DEV_NOTES.md
examples/: count_kmers.rs
src/: functions.rs  lib.rs  utils.rs
src/functions/: kmer_counter.rs
src/utils/: rolling_encoder.rs
