[package]
name = "kmer-forge"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["async-io", "bevy_asset", "bevy_core_pipeline", "bevy_gizmos", "bevy_picking", "bevy_remote", "bevy_render", "bevy_state", "bevy_text", "bevy_ui", "bevy_window", "bevy_winit", "default_font", "multi_threaded", "png", "x11"] }
bincode = "2.0.0"
clap = { version = "4.5.31", features = ["derive"] }
needletail = "0.6.3"
xorf = "0.11.0"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3", "const_xxh3"] }
